Fix white flickering when scrolling quickly
Add a fixed position dark background below the fullscreen workaround to
provide a permanent "dark" backdrop when the fullscreen workaround needs
to be resized.

--- a/deluminate.css
+++ b/deluminate.css
@@ -15,6 +15,13 @@ html[hc^="noinvert"][hc*="kill_background"] body {
   color: #FFF !important;
 }
 
+html[hc^="delumine"] #deluminate_backdrop {
+    background-color: white;
+}
+#deluminate_backdrop {
+    background-color: black;
+}
+
 /* Override the above with a low-contrast version if selected. */
 html[hc^="delumine"][hc*="low-contrast"] {
   -webkit-filter: invert() hue-rotate(180deg) brightness(105%) contrast(85%);
